    - Improved log formatting in the test scripts.
    - Improved memory allocation during compression/decompression operations.
    - Removed the limitation on workers which was previously imposed by blocksize vs. available RAM.
    - Rewrote the testing framework to close issue #5 - Test are now a suite, refer to the documenation.
    - Added backup-to and recovery-via FTP with TLS support. Review the documentation.

v 2.0.0 (legacy):
    - Rewritten from the ground up to leverage return-oriented design principals.
    -- addresses the issue with windows introduced in 0.3.0!
    - Tapestry is now packaged as a module and installed and invoked as such.
    - Places the (currently unutilized) integrity testing task classes into `classes.py` for future use.

v 2.0.1 (release):
    - Issue 12: rectified an NS attribute error that was causing runs with the genKey flag set to use the previous key
    (if any) rather than the newly-generated key
    - Issue 13: Changed the behaviour for the creation of category directories to improve error handling in cases where
    the parent directory of a category is missing.

v 2.1.0 (dev):
    - Test Framework Redesign - better test coverage means more reliable software
    - Updated documentation to facilitate security review and additional development efforts.
    - Added new functionality surrounding file validation, either on-demand or at runtime.
        - add `Build-Time File Validation: True` to your config file to activate.
        - demand-validate specific block files with `--validate` (requires decryption)
    - Fixed an unreported bug introduced in v2.0.0 that caused an error message at runtime.
    - If no `-c` config file path is provided, tapestry will look for `tapestry.cfg` in the current working directory.
     - If that file is also not found, Tapestry will generate a config file with sane defaults and save it in that
     location.